--- a/css/styles.css
+++ b/css/styles.css
@@ -11475,6 +11475,11 @@ html {
   opacity: 0;
   background-color: rgba(26, 188, 156, 0.9);
 }
+.portfolio-item .h2 {
+  color: #fff !important;
+  background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
+}
+
 .portfolio .portfolio-item .portfolio-item-caption:hover {
   opacity: 1;
 }
