--- a/css/styles.css
+++ b/css/styles.css
@@ -11475,9 +11475,13 @@ html {
   opacity: 0;
   background-color: rgba(26, 188, 156, 0.9);
 }
-.portfolio-item .h2 {
+.portfolio-item .h2-1{
   color: #fff !important;
-  background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
+  padding-left: 2%;
+  bottom: 0px;
+  background-image: url('/assets/img/portfolio/cabin.png') !important;
+  background-repeat: no-repeat;
+  border-radius: 20px 20px 0px 0px;
 }
 
 .portfolio .portfolio-item .portfolio-item-caption:hover {
