--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@
   }
 }
 
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -88,6 +89,9 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+
+
 
 hr {
   margin: 1rem 0;
@@ -301,6 +305,21 @@ img,
 svg {
   vertical-align: middle;
 }
+
+@media only screen and (max-device-width: 480px) and (orientation: portrait) {
+  img.porcodio {max-width: 30% !important;
+    padding-top: 40px !important;
+    width: 200px !important;
+  }
+} 
+
+img.porcodio {max-width: 10% !important;
+    padding-top: 40px  !important;
+    width: 200px !important;
+  }
+
+
+
 
 table {
   caption-side: bottom;
@@ -7381,6 +7400,11 @@ textarea.form-control-lg {
   margin-bottom: 3rem !important;
 }
 
+.mb-5 {
+  margin-bottom: 3rem !important;
+}
+
+
 .mb-auto {
   margin-bottom: auto !important;
 }
@@ -11435,6 +11459,9 @@ html {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
 }
+
+
+
 .masthead .masthead-heading {
   font-size: 2.75rem;
   line-height: 2.75rem;
@@ -11584,3 +11611,6 @@ html {
 .copyright {
   background-color: #1a252f;
 }
+
+
+
