--- a/css/styles.css
+++ b/css/styles.css
@@ -11613,7 +11613,9 @@ html {
 }
 
 
-
+/*
+--------------------- C O U N T E R 
+*/
 .demo{ background-color: #e7e7e7; }
 .counter{
     font-family: 'Nunito Sans', sans-serif;
