--- a/css/styles.css
+++ b/css/styles.css
@@ -11704,3 +11704,10 @@ html {
 @media screen and (max-width:990px){
     .counter{ margin-bottom: 40px; }
 }
+/*
+-------------- ANIMAZIONE LOGHETTI COUNTER
+*/
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
